@@ -1,5 +1,7 @@
 1.3.5 - TBD
-    * Added sliders for atmosphere and fog density
+    * Re-engineered atmosphere and fog rendering, replaced it with a simpler
+      but more customizable fog system. Fog density and color can be changed
+      by the user (in the "Sky & Fog" tab).
     * Fixed stairs with fog render issue
     * Added a notification after changing the Y cutoff setting about reloading
       the chunks for the setting to take effect.
